gcc/testsuite/rust/rustc/ui/borrowck/borrowck-init-in-called-fn-expr.rs
fn main() {
    let j = || -> isize {
        let i: isize;
        i // { dg-error ".E0381." "" { target *-*-* } }
    };
    j();
}

